@@ -24,7 +24,7 @@
 
 #include "includes.h"
 
-RCSID("$OpenBSD: sftp.c,v 1.23 2002/02/04 21:53:12 djm Exp $");
+RCSID("$OpenBSD: sftp.c,v 1.24 2002/02/05 00:00:46 djm Exp $");
 
 /* XXX: short-form remote directory listings (like 'ls -C') */
 
@@ -46,6 +46,7 @@ char *__progname;
 #endif
 
 FILE* infile;
+size_t copy_buffer_len = 32768;
 
 static void
 connect_to_server(char *path, char **args, int *in, int *out, pid_t *sshpid)
@@ -93,7 +94,8 @@ usage(void)
 {
 	fprintf(stderr,
 	    "usage: sftp [-1Cv] [-b batchfile] [-F config] [-o option] [-s subsystem|path]\n"
-	    "            [-S program] [user@]host[:file [file]]\n");
+	    "            [-P direct server path] [-S program] \n"
+	    "            [-B buffer_size] [user@]host[:file [file]]\n");
 	exit(1);
 }
 
@@ -121,7 +123,7 @@ main(int argc, char **argv)
 	ll = SYSLOG_LEVEL_INFO;
 	infile = stdin;		/* Read from STDIN unless changed by -b */
 
-	while ((ch = getopt(argc, argv, "1hvCo:s:S:b:F:P:")) != -1) {
+	while ((ch = getopt(argc, argv, "1hvCo:s:S:b:B:F:P:")) != -1) {
 		switch (ch) {
 		case 'C':
 			addargs(&args, "-C");
@@ -158,6 +160,11 @@ main(int argc, char **argv)
 			break;
 		case 'P':
 			sftp_direct = optarg;
+			break;
+		case 'B':
+			copy_buffer_len = strtol(optarg, &cp, 10);
+			if (copy_buffer_len == 0 || *cp != '\0')
+				fatal("Invalid buffer size \"%s\"", optarg);
 			break;
 		case 'h':
 		default:
